--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     <div class="profile">
       <img id="perfil-img" src="images/alberto.png" alt="Alberto Escobar">
       <h2>Sobre mí</h2>
-      <p class="intro">Desarrollador de software especializado en desarrollo
-        back-end. Experimentado en lenguajes de programación tales como C# y SQL.</p>
+      <p class="intro">Soy un profesional altamente capacitado en el desarrollo de software y la ingeniería de datos, 
+        con experiencia en lenguajes de programación como C# y SQL. Me destaco por tener habilidades en resolver problemas
+         complejos y por ser una persona proactiva y apasionada por la tecnología. Durante mi carrera, he participado en varios
+          proyectos de desarrollo de software y análisis de datos, lo que me ha permitido adquirir una amplia experiencia en la industria.</p>
     </div>
     <hr>
     <div class="skills">
